# bazel_example

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  MODULE.bazel  generate_protos.sh  go.mod  mypy_protobuf_requirements.txt  pyrightconfig.json  test_echo.sh  test_echo_cpp.sh  test_echo_go.sh  test_echo_rust.sh
cpp_echo_client/: BUILD.bazel  main.cc
cpp_echo_server/: BUILD.bazel  main.cc
cpp_package/: BUILD.bazel
go_echo_client/: main.go
go_echo_server/: main.go
go_package/: BUILD.bazel
proto/: BUILD.bazel  defs.bzl
proto/demo/echo/v1/: echo.proto
proto/demo/notification/v1/: notification.proto
proto/demo/user/v1/: user.proto
python_package/: BUILD.bazel  defs.bzl
rust_echo_client/: Cargo.toml
rust_echo_client/src/: main.rs
rust_echo_server/: Cargo.toml
rust_echo_server/src/: main.rs
rust_package/: BUILD.bazel  Cargo.toml
