module(
    name = "bazel_test",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")
bazel_dep(name = "protobuf", version = "31.1")

# Pin protobuf to 31.1 to avoid lld linker issues on macOS with newer versions
single_version_override(
    module_name = "protobuf",
    version = "31.1",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:mypy_protobuf_requirements.txt",
)
use_repo(pip, "pip")
