module(
    name = "bazel_test",
    version = "0.0.0",
)

# ─── Core ────────────────────────────────────────────────────────────────────

bazel_dep(name = "protobuf", version = "31.1")

single_version_override(
    module_name = "protobuf",
    version = "31.1",
)

# ─── Python ──────────────────────────────────────────────────────────────────

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:mypy_protobuf_requirements.txt",
)
use_repo(pip, "pip")

# ─── C++ ─────────────────────────────────────────────────────────────────────

bazel_dep(name = "rules_proto_grpc_cpp", version = "5.8.0")

# ─── Go (source generation only) ────────────────────────────────────────────

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.8.0")

# ─── Rust (source generation only) ──────────────────────────────────────────

bazel_dep(name = "rules_rust", version = "0.66.0")
bazel_dep(name = "rules_rust_prost", version = "0.66.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")
